# Multi-Agent-RL-for-Autonomous-Drone-Swarms

./: .gitignore  PHYSICS_DEBUGGING.md  PHYSICS_ENV_FIX.md  README.md  TRAINING_COMMANDS.md  pyproject.toml  requirements-dev.txt  requirements-rllib.txt  requirements.txt  test_gpu.py
artifacts/: policy.onnx
configs/: README.md  curriculum_v1.yaml  domain_randomization_v1.yaml  eval_protocol_quick.yaml  eval_protocol_v1.yaml
docs/: ARCHITECTURE.md  EXPERIMENT_PLAN.md  README.md  RUNBOOK.md  TROUBLESHOOTING.md
reports/: README.md  final_report.md
reports/metrics/: curriculum_runs.csv  eval_baseline_n3.csv  final_benchmark.csv  final_metrics_template.csv  multi_baseline_n3.csv  multi_debug.csv  multi_verify.csv  run_log_template.csv  test_eval.csv  train_attention.csv  train_ctde.csv  train_physics.csv
reports/plots/: PLOT_TEMPLATES.md
reports/templates/: FINAL_REPORT_TEMPLATE.md  WEEK_REPORT_TEMPLATE.md
scripts/: evaluate_protocol.py  export_onnx.py  interactive_dashboard.py  plot_comparison.py  plot_metrics.py  run_full_benchmark.py  run_physics_gui.py  train_attention.py  train_ctde.py  train_curriculum.py  train_multi_agent.py  train_physics.py  train_single_agent.py  verify_dashboard.py  verify_physics.py  visualize_swarm.py  watch_plot_metrics.py
src/swarm_marl/: __init__.py
src/swarm_marl/envs/: __init__.py  common.py  drone_physics_env.py  drone_swarm_env.py  single_drone_env.py
src/swarm_marl/training/: __init__.py  callbacks.py  config_builders.py  models.py
src/swarm_marl/utils/: __init__.py  config_io.py  (+2 more)
tests/: test_env_smoke.py
(+1 files in other folders)
