[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-swarm-marl"
version = "0.1.0"
description = "Starter project for multi-agent reinforcement learning of autonomous drone swarms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "gymnasium>=0.29",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "matplotlib>=3.8",
  "tensorboard>=2.16",
]
rllib = [
  "ray[rllib]>=2.9; python_version<'3.13'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
